fix: contentEditAble white space charcode

--- a/src/styles/treeSelect.less
+++ b/src/styles/treeSelect.less
@@ -68,6 +68,7 @@
       flex: 1;
       margin-bottom: @padding-base-vertical;
       outline: none;
+      white-space: pre;
 
       &:after {
         content: '\feff ';
